--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- css -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:200,700" rel="stylesheet">
+
     <title>Tía Tomate</title>
 </head>
 
@@ -13,7 +20,11 @@
         <nav></nav>
     </header>
     <main>
-        <section class="what_we_do"></section>
+        <section class="what_we_do">
+            <h1>De nuestro cariño<br>
+                <span class="tittle">a tu mesa </span></h1>
+
+        </section>
         <section class="about_us"></section>
         <section class="get_it"></section>
     </main>
